--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,222 @@
-<a href="/sessions/new">FREE CAMS</a>
+<a class="modal-trigger" href="#modal1">
+            <div class="col s12 m4">
+              <div class="card">
+                <div class="online"><p>ONLINE</p></div>
+                <div class="card-image behind">
+                  <div class="online"></div>
+                  <img src="http://placehold.it/350x200">
+                  <!-- <span class="card-title">Card Title</span> -->
+                </div>
+                <div class="card-content">
+                  <p><strong>John Doe</strong></p>
+                </div>
+                <div class="card-action">
+                <div class="chip">
+                  <div class="rating">
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>            
+                  </div>
+                </div>
+                  <a href="#" class="right">100 Hours</a>
+                </div>
+              </div> <!-- /card -->
+            </div>
+          </a>
+
+          <a class="modal-trigger" href="#modal1">
+            <div class="col s12 m4">
+              <div class="card">
+                <div class="online"><p>ONLINE</p></div>
+                <div class="card-image behind">
+                  <div class="online"></div>
+                  <img src="http://placehold.it/350x200">
+                  <!-- <span class="card-title">Card Title</span> -->
+                </div>
+                <div class="card-content">
+                  <p><strong>John Doe</strong></p>
+                </div>
+                <div class="card-action">
+                <div class="chip">
+                  <div class="rating">
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>            
+                  </div>
+                  </div>
+                  <a href="#" class="right">100 Hours</a>
+                </div>
+              </div> <!-- /card -->
+            </div>
+          </a>
+
+          <a class="modal-trigger" href="#modal1">
+            <div class="col s12 m4">
+              <div class="card">
+                <div class="offline"><p>OFFLINE</p></div>
+                <div class="card-image behind">
+                  <div class="online"></div>
+                  <img src="http://placehold.it/350x200">
+                  <!-- <span class="card-title">Card Title</span> -->
+                </div>
+                <div class="card-content">
+                  <p><strong>John Doe</strong></p>
+                </div>
+                <div class="card-action">
+                <div class="chip">
+                  <div class="rating">
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>            
+                  </div>
+                  </div>
+                  <a href="#" class="right">100 Hours</a>
+                </div>
+              </div> <!-- /card -->
+            </div>
+          </a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Teacher Profile Modal -->
+
+  <div id="modal1" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <div class="right modal-btns">
+      <a class="waves-effect waves-light btn dark grey lighten-3">Message</a>&nbsp&nbsp&nbsp
+      <a class="waves-effect waves-light btn green accent-4 btn tooltipped" data-position="top" data-delay="50" data-tooltip="Click to connect now.">Connect Now</a>
+      </div>
+      <div class="clearfix"></div>
+      <!-- <hr> -->
+      <div class="row">
+        <div class="col m3">
+        <img src="images/default-user.png" class="modal-teacher-pic">
+        </div>
+        <div class="col m9"><br><br>
+        <h4>Username</h4>
+        <p><strong>Member Since: Febuary 20, 2016</strong></p>
+        <div class="teacher-rating">
+          <span><i class="fa fa-star"></i></span>
+          <span><i class="fa fa-star"></i></span>
+          <span><i class="fa fa-star"></i></span>
+          <span><i class="fa fa-star"></i></span>
+        </div>
+        </div>
+      </div>
+      <!-- Categories -->
+      <div class="row">
+        <div class="col m3">
+          <div class="card">
+            <div class="card-content teacher-categories">
+              <div class="chip">Category</div>
+              <div class="chip">Category</div>
+              <div class="chip">Category</div>
+              <div class="chip">Category</div>
+              <div class="chip">Category</div>
+              <div class="chip">Category</div>
+              <div class="chip">Category</div>
+            </div>
+          </div>
+        </div>
+        <!-- Bio -->
+        <div class="col m9">
+          <div class="card">
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga error quidem, doloremque nisi quis nobis eveniet illum praesentium asperiores! Labore vel aspernatur harum voluptates. Iusto sit assumenda officia, natus aspernatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat culpa fuga, molestias reprehenderit cumque rem modi rerum totam. Dolores ab accusamus, explicabo facere veritatis eligendi eius quis ipsam. Et, consectetur. Placeat culpa fuga, molestias reprehenderit cumque rem modi rerum totam. Dolores ab accusamus, explicabo facere veritatis eligendi eius quis ipsam. Et, consectetur.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Reviews -->
+      <div class="row">
+        <div class="col m12">
+         <div class="card">
+            <div class="card-content">
+                <h5 class="left"><strong>John Doe</strong></h5>
+                <div class="chip right">
+                  <div class="rating">
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>
+                    <span><i class="fa fa-star-o"></i></span>            
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+              <hr>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga error quidem, doloremque nisi quis nobis eveniet illum praesentium asperiores! Labore vel aspernatur harum voluptates. Iusto sit assumenda officia, natus aspernatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+    </div>
+  </div>
+      
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Explicit Modal  -->
+
+  <div class="explicit-modal">
+    <div id="explicit" class="modal">
+      <div class="modal-content center">
+        <h4><strong>WARNING! 18+ CONTENT</strong></h4>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam voluptate explicabo soluta atque nesciunt alias possimus vero. Facere qui nam necessitatibus quia ex ab eaque, consectetur repudiandae odit iste, quaerat!</p>
+        <a class="waves-effect red darken-4 btn">Proceed</a>&nbsp&nbsp&nbsp&nbsp&nbsp
+        <a class="waves-effect red darken-4 btn">No Thanks</a>
+      </div>
+    </div>
+  </div>
