--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,31 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
-  <link rel="stylesheet" href="/stylesheets/application.css">
-
-  
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Webcam App</title>
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-          
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/javascript/application.js"></script>
-
-  <title></title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">  
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/stylesheets/application.css">
 </head>
 <body>
-  <%= yield %>
+  <nav class="grey darken-4">
+    <div class="nav-wrapper container">
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <div class="row">
+          <li><a class='dropdown-button' href='#' data-beloworigin='true' data-activates='dropdown1'><img src="images/default-user.png" id="user-navbar-img"></a></li>
+          <ul id='dropdown1' class='dropdown-content'>
+            <li><a href="#!">Profile</a></li>
+            <li><a href="#!">Settings</a></li>
+            <li class="divider"></li>
+            <li><a href="#!">Logout</a></li>
+          </ul>
+        </div>
+      </ul>
+    </div>
+  </nav>
+        
+  <ul class="side-nav fixed">
+    <div id="logo-box">
+      <img src="http://placehold.it/160x65">
+    </div>
+      <!-- <a href="#" class="brand-logo"><img id="logo" src="images/logo.svg"></a> -->
+      <li class="active"><a href="#!">Home</a></li>
+      <li><a href="#!">Computers</a></li>
+      <li><a href="#!">Finance</a></li>
+      <li><a href="#!">Legal</a></li>
+      <li><a href="#!">Design</a></li>
+      <li><a href="#!">Sports</a></li>
+      <li><a href="#!">Gaming</a></li>
+      <li><a href="#!">Food</a></li>
+      <li><a class="modal-trigger" href="#explicit">Adult</a></li>
+  </ul>
+<body>
+
+
+
+
+
+   <div class="container">
+    <div class="section">
+      <div class="section scrollspy">
+        <div class="row">
+          <div id="hacker"></div>
+            
+          <%= yield %>
+
+        </div> <!-- /row -->
+      </div> 
+    </div> <!-- /section -->
+  </div> <!-- /container -->
+
+
+
+
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <script src="javascript/application.js"></script>
 </body>
 </html>
+
