Icon now works in any page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
     <div class="nav-wrapper container">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <div class="row">
-          <li><a class='dropdown-button' href='#' data-beloworigin='true' data-activates='dropdown1'><img src="images/default-user.png" id="user-navbar-img"></a></li>
+          <li><a class='dropdown-button' href='#' data-beloworigin='true' data-activates='dropdown1'><img src="/images/default-user.png" id="user-navbar-img"></a></li>
           <ul id='dropdown1' class='dropdown-content'>
             <li><a href="#!">Profile</a></li>
             <li><a href="#!">Settings</a></li>
