fixed git error

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,9 @@
   <nav class="grey darken-4">
     <div class="nav-wrapper container">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
+
+      <!-- Home nav -->
+
         <div class="row">
           <li><a class='dropdown-button' href='#' data-beloworigin='true' data-activates='dropdown1'><img src="/images/default-user.png" id="user-navbar-img"></a></li>
           <ul id='dropdown1' class='dropdown-content'>
@@ -24,6 +27,14 @@
             <li class="divider"></li>
             <li><a href="#!">Logout</a></li>
           </ul>
+          
+          <!-- Session nav -->
+
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a id="button" class="waves-effect waves-light btn-large valign">Time:00:00 </a></li>
+            <li><a href="/" id="button" class="waves-effect waves-light btn-large valign">Quit Session</a></li>
+          </ul>
+
         </div>
       </ul>
     </div>
