--- a/app/views/rooms/new.erb
+++ b/app/views/rooms/new.erb
@@ -6,8 +6,11 @@
   #content {
     position:absolute; left: 0; right: 0; bottom: 0; top: 64px; overflow: hidden;
   }
+  .side-nav{
+    visibility: hidden;
+  }
 </style>
 
 <div id="content">
-  <iframe width="100%" height="100%" frameborder="0" src="https://apprtc.appspot.com/r/<%= @session.url_key %>" />
+  <iframe width="100%" height="100%" frameborder="0" src="https://apprtc.appspot.com/r/<%= @room.url_key %>" />
 </div>
