Login and Signup Routing

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -6,19 +6,96 @@
   font-size: inherit;
 }
 
+body { 
+  background: url("/images/themes/bg.png") repeat;
+}
+
+/* ************* Do not modify ************* */
+
 #hacker {
   height: 5px;
   width: 100%;
 }
 
+/* ************* Helpers ************* */
+
 .dark {
   color: #444;
 }
 
-/*.orange {
-  color: #ffab40 !important;
+/* ************* Navbar ************* */
+
+ #logo {
+  height: 90%;
+  width: auto;
+  margin-left: -10px;
+  margin-top: 3px;
+ }
+
+ #logo-box {
+  width: 100%;
+  height: 64px;
+ }
+
+/*#user-navbar-img {
+  border-radius: 100%;
+  height: 40px;
+  margin-top: 12px;
+  margin-right: 15px;
+  margin-left: 5px;
 }*/
 
+#full-screen {
+  margin-left: 120px;
+}
+
+.side-nav {
+  position: fixed;
+  width: 160px;
+  left: -105%;
+  top: 0;
+  margin: 0;
+  height: 100%;
+  height: calc(100% + 60px);
+  height: -moz-calc(100%);
+  padding-bottom: 60px;
+  background-color: #fff;
+  z-index: 999;
+  overflow-y: auto;
+  will-change: left;
+}
+
+.dropdown-content {
+  background-color: #fff;
+  margin: 0;
+  display: none;
+  min-width: 200px;
+  max-height: 650px;
+  overflow-y: auto;
+  opacity: 0;
+  position: absolute;
+  z-index: 999;
+  will-change: width, height;
+}
+
+.dropdown-content li {
+  clear: both;
+  color: rgba(0, 0, 0, 0.87);
+  cursor: pointer;
+  min-height: 50px;
+  line-height: 0.5rem;
+  width: 100%;
+  /*text-align: left;*/
+  text-transform: none;
+}
+
+#power-on {
+  color: red;
+}
+
+#power-on:hover {
+  color: #00c853;
+}
 nav ul a:hover {
   background: none;
 }
@@ -26,6 +103,8 @@ nav ul a:hover {
 .dropdown-content li>a, .dropdown-content li>span {
   color: #444;
 }
+
+/* ************* Adult Modal ************* */
 
 .explicit-modal .modal {
   height: 300px !important;
@@ -44,6 +123,40 @@ nav ul a:hover {
   margin-left: auto;
   text-align: center;
 }
+
+/* ************* Themes ************* */
+
+#theme-btn {
+  margin-top: 10px;
+  margin-right: -60px;
+}
+
+.theme-0 {
+  background-image: none;
+  background-color: white;
+}
+.theme-1 {
+  background: url("/images/themes/1.png") repeat;
+}
+.theme-2 {
+  background: url("/images/themes/2.png") repeat;
+}
+.theme-3 {
+  background: url("/images/themes/3.png") repeat;
+}
+.theme-4 {
+  background: url("/images/themes/4.png") repeat;
+}
+.theme-5 {
+  background: url("/images/themes/5.png") repeat;
+}
+.theme-6 {
+  background: url("/images/themes/6.png") repeat;
+}
+.theme-7 {
+  background: url("/images/themes/7.png") repeat;
+}
+
 /* ************* Teacher Modal ************* */
 
 .modal-teacher-pic {
@@ -68,46 +181,7 @@ nav ul a:hover {
   position: absolute;
 }
 
-/* ************* Layouts File ************* */
- #logo {
-  height: 45px;
-  margin-left: 20px;
-  margin-top: 10px;
- }
-
- #logo-box {
-  width: 100%;
-  height: 64px;
-  /*background-color: #FF9100;*/
- }
-
-#user-navbar-img {
-  border-radius: 100%;
-  height: 40px;
-  margin-top: 12px;
-  margin-right: 15px;
-  margin-left: 5px;
-}
-
-#full-screen {
-  margin-left: 120px;
-}
-
-.side-nav {
-  position: fixed;
-  width: 160px;
-  left: -105%;
-  top: 0;
-  margin: 0;
-  height: 100%;
-  height: calc(100% + 60px);
-  height: -moz-calc(100%);
-  padding-bottom: 60px;
-  background-color: #fff;
-  z-index: 999;
-  overflow-y: auto;
-  will-change: left;
-}
+/* ************* Index Cards ************* */
 
 .card .card-action {
   border-top: 1px solid rgba(160, 160, 160, 0.2);
@@ -191,12 +265,6 @@ nav ul a:hover {
 
 /* ************* Login/Register Forms ************* */
 
-
-.nav-login input {
-  font-size: 15px !important;
-}
-
-
 /* label color */
 .input-field label {
  color: #ffab40;
@@ -238,7 +306,6 @@ label[for=textarea1] {
 }
 
 /* Password */
-/* label focus color */
 .input-field input[type=password]:focus + label {
  color: #ffab40;
 }
