added some styles

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
 <body>
 
   <!-- Top Navbar -->
-  <nav class="grey darken-4">
+  <nav class="navbar-pattern">
     <div class="nav-wrapper container">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <div class="row">
@@ -37,7 +37,7 @@
   <!-- Side Navbar -->
   <ul class="side-nav fixed">
     <div id="logo-box">
-    <a href="/"><img id="logo" src="/images/logo.svg"></a>
+    <a href="/"><img id="logo" src="/images/logo1.svg"></a>
       <!-- <img src="http://placehold.it/160x65"> -->
     </div>
       <li class="active"><a href="/">Home</a></li>
@@ -62,7 +62,6 @@
     <div class="section">
       <div class="section scrollspy">
         <div class="row">
-          <div id="hacker"></div>
             
           <%= yield %>
 
@@ -80,7 +79,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-  <script src="javascript/application.js"></script>
+  <script src="/javascript/application.js"></script>
 </body>
 </html>
 
