--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -62,7 +62,6 @@
     <div class="section">
       <div class="section scrollspy">
         <div class="row">
-          <div id="hacker"></div>
             
           <%= yield %>
 
@@ -80,7 +79,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-  <script src="javascript/application.js"></script>
+  <script src="/javascript/application.js"></script>
 </body>
 </html>
 
