--- a/app/views/reviews/index.erb
+++ b/app/views/reviews/index.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col s12 m12 blue-grey darken-1 invoice-padding">
+  <div class="col s12 m12 blue-grey darken-1">
       <div class="card-content">
         <span class="card-title"> Invoice</span>
           <table class="striped centered responsive-table">
@@ -39,15 +39,50 @@
 </div>
 
 
-<div class="row">
-  <div class="col s12 m12 blue-grey darken-1">
-    <form>
-      <div class="input-field col s12">
-      <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-        <label for="icon_prefix2">Comments</label>
-      </div>
-    </form>
-  </div>
-</div>
+
 
 <a href='/' class="waves-effect waves-light btn-large right">Submit</a>
+
+
+<div class="row">
+      <div class="col m9"><br><br>
+      <h4>Username</h4>
+      <p><strong>Member Since: Febuary 20, 2016</strong></p>
+      <div class="rating">
+        <span><i class="fa fa-star"></i></span>
+        <span><i class="fa fa-star"></i></span>
+        <span><i class="fa fa-star"></i></span>
+        <span><i class="fa fa-star"></i></span>
+      </div>
+      </div>
+    </div>
+
+
+    <form>
+      <div class="col s12 div-card">
+      <textarea placeholder="Leave a comment..." id="icon_prefix2" class="materialize-textarea"></textarea>
+      </div>
+    </form>
+
+    <a href='#review' class="modal-trigger waves-effect waves-light btn-large right">Submit</a>
+    <a class="modal-trigger" href="#review">Submit</a>
+
+
+<div class="explicit-modal">
+  <div id="review" class="modal">
+    <div class="modal-content center">
+
+
+
+      <h4><strong>Thanks for the like!</strong></h4>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam voluptate explicabo soluta atque nesciunt alias possimus vero. Facere qui nam necessitatibus quia ex ab eaque, consectetur repudiandae odit iste, quaerat!</p>
+      <a class="waves-effect red darken-4 btn">Proceed</a>&nbsp&nbsp&nbsp&nbsp&nbsp
+      <a class="modal-close waves-effect red darken-4 btn">No Thanks</a>
+
+
+
+
+    </div>
+  </div>
+</div>
