--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,13 +14,10 @@
 </head>
 <body>
 
-  <!-- Top Navbar -->
+   <!-- Top Navbar -->
   <nav class="grey darken-4">
     <div class="nav-wrapper container">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-
-      <!-- Home nav -->
-
         <div class="row">
         <% if current_user %>
           <li><a class='dropdown-button' href='#' data-beloworigin='true' data-activates='dropdown1'><%= current_user.name %></a></li>
@@ -30,7 +27,15 @@
             <li class="divider"></li>
             <li><a href="/logout"><span class="left">Power Off </span><i class="fa fa-power-off right"></i></a></li>
           </ul>
-            <li><a href="/sessions/new" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Go Online"><i id="power-on" class="fa fa-power-off fa-2x"></i></a></li>
+          <% if @in_room %>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+
+              <li><a id="timer_button" class="waves-effect waves-light btn-large valign"><span id="timer_text">Start One-on-One</span></a></li>
+              <li><a href="/" id="button" class="waves-effect waves-light btn-large valign">Quit Session</a></li>
+            </ul>
+          <%end%>
+
+            <li><a href="/rooms/create" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Go Online"><i id="power-on" class="fa fa-power-off fa-2x"></i></a></li>
         <% end %>
         </div>
       </ul>
@@ -54,11 +59,6 @@
       <li><a class="modal-trigger" href="#explicit">Adult</a></li>
   </ul>
 <body>
-
-
-
-
-
 
 
    <div class="container">
