--- a/app/views/rooms/create.erb
+++ b/app/views/rooms/create.erb
@@ -1,13 +1,22 @@
 <style type="text/css">
   body, html { 
-      margin: 0; padding: 0; height: 100%; 
+    margin: 0; 
+    padding: 0; 
+    height: 100%;
   }
-  
   #content {
-    position:absolute; left: 0; right: 0; bottom: 0; top: 64px; overflow: hidden;
+    position:absolute; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    top: 64px; 
+    overflow: hidden;
   }
-  .side-nav{
+  .side-nav {
     visibility: hidden;
+  }
+  #create-room {
+   visibility: hidden;
   }
 </style>
 
