added user profile and edit profile pages

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -35,8 +35,8 @@
           <% else %>
             <li><a class='dropdown-button hide-on-med-and-down' href='#' data-beloworigin='true' data-activates='dropdown1'><%= current_user.name %></a></li>
               <ul id='dropdown1' class='dropdown-content'>
-                <li><a href="#!"><span class="left">View Profile </span> <i class="fa fa-user right"></i></a></li>
-                <li><a href="#!"><span class="left">Settings </span><i class="fa fa-cog right"></i></a></li>
+                <li><a href="/user/profile"><span class="left">View Profile </span> <i class="fa fa-user right"></i></a></li>
+                <li><a href="/user/settings"><span class="left">Settings </span><i class="fa fa-cog right"></i></a></li>
                 <li class="divider"></li>
                 <li><a href="/logout"><span class="left">Logout </span><i class="fa fa-power-off right"></i></a></li>
               </ul>
