--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,11 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/stylesheets/application.css">
+    <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <script src="/javascript/application.js"></script>
 </head>
 <body>
 
@@ -52,13 +57,13 @@
       <!-- <img src="http://placehold.it/160x65"> -->
     </div>
       <li class="active"><a href="/">Home</a></li>
-      <li><a href="#!">Computers</a></li>
-      <li><a href="#!">Finance</a></li>
-      <li><a href="#!">Legal</a></li>
-      <li><a href="#!">Design</a></li>
-      <li><a href="#!">Sports</a></li>
-      <li><a href="#!">Gaming</a></li>
-      <li><a href="#!">Food</a></li>
+      <li class="filter" id="all"><a href="#!">All</a></li>
+      <li class="filter" id="finance"><a href="#!">Finance</a></li>
+      <li class="filter" id="legal"><a href="#!">Legal</a></li>
+      <li class="filter" id="design"><a href="#!">Design</a></li>
+      <li class="filter" id="sports"><a href="#!">Sports</a></li>
+      <li class="filter" id="gaming"><a href="#!">Gaming</a></li>
+      <li class="filter" id="food"><a href="#!">Food</a></li>
       <li><a class="modal-trigger" href="#explicit">Adult</a></li>
   </ul>
 <body>
@@ -81,11 +86,8 @@
 
 
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-  <script src="/javascript/application.js"></script>
+
+  
 </body>
 </html>
 
