--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -56,7 +56,7 @@
     <a href="/"><img id="logo" src="/images/logo1.svg"></a>
       <!-- <img src="http://placehold.it/160x65"> -->
     </div>
-      <li class="active"><a href="/">Home</a></li>
+      <li class="active"><a href="/">All</a></li>
       <li><a href="#!">Computers</a></li>
       <li><a href="#!">Finance</a></li>
       <li><a href="#!">Legal</a></li>
