--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -27,6 +27,8 @@ body {
   color: white;
 }
 
+
+
 /* ************* Navbar ************* */
 
  #logo {
@@ -349,68 +351,58 @@ nav ul a:hover {
   position: absolute;
 }
 
-/* ************* Login/Register Forms ************* */
+/* *************  Forms ************* */
+
+
+.input-field input {
+  border-radius: 100px;
+  padding-left: 20px;
+  border: 1px solid #00c853;
+  box-shadow: none !important;
+  margin-top: 10px !important;
+}
+
+.input-field input.select-dropdown {
+  border-radius: 100px;
+  padding-left: 20px;
+  border: 1px solid #00c853;
+  box-shadow: none !important;
+}
+
+.input-field input[type=text]:disabled {
+  color: rgba(0, 0, 0, 0.26);
+  border: 1px dotted rgba(0, 0, 0, 0.26);
+}
+
+[type="checkbox"]:checked+label:before {
+  border-bottom: 2px solid #00c853;
+  border-right: 2px solid #00c853;
+  margin-top: 10px;
+}
+
+
+textarea:focus {
+  border: 1px solid #00c853 !important;
+  -webkit-box-shadow: 0 1px 0 0 #00c853 !important;
+  -moz-box-shadow: 0 1px 0 0 #00c853 !important;
+  box-shadow: 0 1px 0 0 #00c853 !important;
+}
 
 /* label color */
 .input-field label {
- color: #ffab40;
+ color: #00c853;
+ margin-left: 10px;
 }
 
-textarea:focus {
-  border-bottom: 1px solid #ffab40 !important;
-  -webkit-box-shadow: 0 1px 0 0 #ffab40 !important;
-  -moz-box-shadow: 0 1px 0 0 #ffab40 !important;
-  box-shadow: 0 1px 0 0 #ffab40 !important;
-}
-
-label[for=textarea1] {
-  color: #ffab40 !important;
-}
-
-/* label focus color */
 .input-field input[type=text]:focus + label {
- color: #ffab40;
-}
-/* label underline focus color */
-.input-field input[type=text]:focus {
- border-bottom: 1px solid #ffab40;
- box-shadow: 0 1px 0 0 #ffab40;
-}
-/* valid color */
-.input-field input[type=text].valid {
- border-bottom: 1px solid #ffab40;
- box-shadow: 0 1px 0 0 #ffab40;
-}
-/* invalid color */
-.input-field input[type=text].invalid {
- border-bottom: 1px solid #ffab40;
- box-shadow: 0 1px 0 0 #ffab40;
-}
-/* icon prefix focus color */
-.input-field .prefix.active {
- color: #ffab40;
+  color: #00c853;
 }
 
-/* Password */
+.input-field input[type=email]:focus + label {
+  color: #00c853;
+}
+
 .input-field input[type=password]:focus + label {
- color: #ffab40;
+  color: #00c853;
 }
-/* label underline focus color */
-.input-field input[type=password]:focus {
- border-bottom: 1px solid #ffab40;
- box-shadow: 0 1px 0 0 #ffab40;
-}
-/* valid color */
-.input-field input[type=password].valid {
- border-bottom: 1px solid #ffab40;
- box-shadow: 0 1px 0 0 #ffab40;
-}
-/* invalid color */
-.input-field input[type=password].invalid {
- border-bottom: 1px solid #ffab40;
- box-shadow: 0 1px 0 0 #ffab40;
-}
-/* icon prefix focus color */
-.input-field .prefix.active {
- color: #ffab40;
-}
+
