fixed explicity modal and index bug

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -16,10 +16,8 @@
 
 
 
-
 <% @users.each do |user| %>
   <!-- Teacher Card -->
-  <div id="hacker"></div>
   <a class="modal-trigger" href="#modal1">
     <div class="col s12 m4">
       <div class="card">
@@ -135,6 +133,10 @@
                   <div class="clearfix"></div>
                 <hr>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga error quidem, doloremque nisi quis nobis eveniet illum praesentium asperiores! Labore vel aspernatur harum voluptates. Iusto sit assumenda officia, natus aspernatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   <% end %>  
