--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -76,7 +76,8 @@
     <div class="section">
       <div class="section scrollspy">
         <div class="row">
-            
+          <div id="hacker"></div>
+          
           <%= yield %>
 
         </div> <!-- /row -->
