--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -1,7 +1,7 @@
 <h1>Edit Profile</h1>
 
 <!-- <div class="row"> -->
-    <form action="/login" method="post">
+    <form action="/user/save_settings" method="post">
       <div class="col m5">
         <div class="input-field">
           <input disabled id="disabled" type="text" class="validate" value="<%= current_user.name %>">
